--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <head>
-        <title>mojeeb is naughty.....</title>
+        <title>assignment
+        
+        </title>
+        <body>abc</body>
     </head>
 </html>
