--- a/index.html
+++ b/index.html
@@ -1,8 +1,58 @@
 <html>
     <head>
-        <title>assignment
+
+      <meta charset="utf-8"/>
+      <meta name="viewport" content ="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         
-        </title>
-        <body>abc</body>
-    </head>
+        <!-- Popper JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="style.css">
+ </head>
+<body>
+<div class ="container-fluid">
+<div class="row beach">
+  <a href = "http://www.piha.co.nz/" target="_blank">
+    <img src= "beach 1.jpg" alt= "beach1" class="img-fluid firstbeach"/>
+    <img src= "beach 2.jpg" alt= "beach2" class="img-fluid secondbeach"/>
+    <img src= "beach 3.jpg" alt="beach3" class="img-fluid thirdbeach"/>
+</a>
+</div>
+
+  
+<div class= "row navbar-nav">
+<nav class="navbar navbar-expand-sm bg-dark">
+<!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="storyboard part 1 .pdf">Storyboard 1</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Storyboard Part 2.pdf">Storyboard 2</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Layout for Part 3.pdf">Wireframe 3</a>
+      </li>
+    </ul>
+ </nav>
+</div>
+<div class ="row-cols-1 part three">
+  <h1 class="display-4">Booking</h1>
+  </div>
+</div>
+<div class = "row-cols-2">
+  <img src="lady.jpg" class="img-fluid girl"/>
+  <img src = "cruise.jpg" class="img-fluid ship"/>
+  
+</div>
+</div>
+ 
+</body>
+
 </html>
