--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="style.css">
- </head>
+ <title>assignment</title></head>
 <body>
 <div class ="container-fluid">
 <div class="row beach">
@@ -22,12 +22,16 @@
     <img src= "beach 1.jpg" alt= "beach1" class="img-fluid firstbeach"/>
     <img src= "beach 2.jpg" alt= "beach2" class="img-fluid secondbeach"/>
     <img src= "beach 3.jpg" alt="beach3" class="img-fluid thirdbeach"/>
+    <div id="centered">Piha</div>
+    <div id="bottom-right">Harsahil Singh 
+      (1531054)
+    </div>
 </a>
 </div>
 
   
 <div class= "row navbar-nav">
-<nav class="navbar navbar-expand-sm bg-dark">
+<nav class="navbar navbar-expand-sm bg-warning">
 <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -46,7 +50,7 @@
   <h1 class="display-4">Booking</h1>
   </div>
 </div>
-<div class = "row-cols-2">
+<div class = " position-relative;">
   <img src="lady.jpg" class="img-fluid girl"/>
   <img src = "cruise.jpg" class="img-fluid ship"/>
   
